--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ python = "^3.10.0"
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.engine:main"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.2"
+pytest-cov = "^4.0.0"
+flake8 = "^6.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
