--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         # we want to test our package on several versions of Python
-        python-version:  [3.10.0]
+        python-version:  [3.10.5, 3.10.6]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
