--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10.0"
+Addpyyaml = "^6.0"
 
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.engine:main"
