--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ python = "^3.10.0"
 pyyaml = "^6.0"
 
 [tool.poetry.scripts]
-gendiff = "gendiff.scripts.run:main"
+gendiff = "gendiff.scripts.gen_diff:main"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.2"
